Fix slightly miss-aligned image on game page

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -45,6 +45,10 @@ footer {
 	.rounded-sm {
 		border-radius: 0.3em !important;
 	}
+	.px-sm-half-gutter {
+		padding-right: calc(var(--bs-gutter-x) * 0.5) !important;
+		padding-left: calc(var(--bs-gutter-x) * 0.5) !important;
+	}
 }
 
 
